AWS/IaC Project - Deploy of Webserver on EC2 with Terraform/ec2/IGW.tf
resource "aws_internet_gateway" "lab_igw" {
  vpc_id = aws_vpc.lab_vpc.id

  tags = {
    Name = "Lab-IGW"
  }
}
