AWS/IaC Project - Deploy of Webserver on EC2 with Terraform/ec2/vpc.tf
resource "aws_vpc" "lab_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "Lab-VPC"
  }
}
